feat: Implement spell selection GUI and projectile entities
- Added SpellScreenHelper for managing spell selection screens.
- Created SpellSelectionScreen for displaying available spells with buttons.
- Implemented SpellProjectileEntity for custom spell projectiles with damage and knockback.
- Developed SpellProjectileEntityRenderer for rendering spell projectiles with textures based on spell school.
- Registered custom entities and networking payloads for spell selection and opening the spell book.
- Added JSON configuration for custom damage type related to spells.
- Included textures for spell projectiles (fire, water, air, earth).

--- a/src/main/resources/assets/mam/lang/en_us.json
+++ b/src/main/resources/assets/mam/lang/en_us.json
@@ -20,6 +20,9 @@
   "item.mam.spellbook_master": "Master Spellbook",
   "item.mam.spellbook.open": "Opening spellbook... (GUI coming soon)",
 
+  "gui.mam.spell_selection": "Spell Selection",
+  "spell.mam.selected": "Selected spell: %s",
+
   "item.mam.projectile_air": "Air Projectile",
   "item.mam.projectile_earth": "Earth Projectile",
   "item.mam.projectile_fire": "Fire Projectile",
