--- a/src/main/resources/assets/mam/lang/en_us.json
+++ b/src/main/resources/assets/mam/lang/en_us.json
@@ -12,13 +12,13 @@
   "item.mam.staff_apprentice": "Apprentice Staff",
   "item.mam.staff_adept": "Adept Staff",
   "item.mam.staff_master": "Master Staff",
-  "item.mam.staff.no_spell": "No spell selected! Use a spellbook to select a spell.",
+  "item.mam.staff.passive_item": "Staff provides buffs to spells when equipped",
 
   "item.mam.spellbook_novice": "Novice Spellbook",
   "item.mam.spellbook_apprentice": "Apprentice Spellbook",
   "item.mam.spellbook_adept": "Adept Spellbook",
   "item.mam.spellbook_master": "Master Spellbook",
-  "item.mam.spellbook.open": "Opening spellbook... (GUI coming soon)",
+  "item.mam.spellbook.no_spell": "No spell selected! Press R to select a spell.",
 
   "gui.mam.spell_selection": "Spell Selection",
   "spell.mam.selected": "Selected spell: %s",
@@ -63,7 +63,7 @@
   "tooltip.mam.gemstone.rarity": "Rarity: %s",
   "tooltip.mam.gemstone.schools": "Schools: %s",
 
-  "key.mam.open_spell_menu": "Open Spell Menu",
+  "key.mam.open_spell_selection": "Open Spell Selection",
   "key.mam.toggle_hud": "Toggle HUD",
   "key.mam.cycle_schools": "Cycle Spell Schools",
 
@@ -73,5 +73,9 @@
 
   "message.mam.spell.cooldown": "Spell on cooldown: %.1fs remaining",
   "message.mam.spell.insufficient_mana": "Insufficient mana! Need %.1f, have %.1f",
-  "message.mam.spell.learned": "Learned spell: %s"
+  "message.mam.spell.learned": "Learned spell: %s",
+  "message.mam.no_staff": "You must hold a staff to open spell selection!",
+  "message.mam.no_spellbook": "You must hold a spellbook to open spell selection!",
+  "message.mam.need_staff_and_spellbook": "You must hold a staff in one hand and a spellbook in the other!",
+  "message.mam.no_spells": "This staff has no spells available!"
 }
