feat: Add rich item tooltips for Spellbook and Staff items, including tier and selected spell information

--- a/src/main/resources/assets/mam/lang/en_us.json
+++ b/src/main/resources/assets/mam/lang/en_us.json
@@ -20,7 +20,17 @@
   "item.mam.spellbook_master": "Master Spellbook",
   "item.mam.spellbook.no_spell": "No spell selected! Press R to select a spell.",
 
+  "tier.mam.novice": "Novice",
+  "tier.mam.apprentice": "Apprentice",
+  "tier.mam.adept": "Adept",
+  "tier.mam.master": "Master",
+
   "gui.mam.spell_selection": "Spell Selection",
+  "gui.mam.spell_grimoire_title": "Spell Grimoire",
+  "gui.mam.sort": "Sort",
+  "gui.mam.favorites_only": "Favorites Only",
+  "gui.mam.all_spells": "All Spells",
+  "gui.mam.close": "Close",
   "spell.mam.selected": "Selected spell: %s",
 
   "item.mam.projectile_air": "Air Projectile",
@@ -50,9 +60,21 @@
   "spell.mam.cast_type.synergy": "Synergy",
 
   "spell.mam.air_strike": "Air Strike",
+  "spell.mam.air_gust": "Air Gust",
+  "spell.mam.air_storm": "Air Storm",
+  "spell.mam.wind_cataclysm": "Wind Cataclysm",
   "spell.mam.earth_strike": "Earth Strike",
+  "spell.mam.earth_shard": "Earth Shard",
+  "spell.mam.earth_quake": "Earth Quake",
+  "spell.mam.continental_rift": "Continental Rift",
   "spell.mam.fire_strike": "Fire Strike",
+  "spell.mam.fire_bolt": "Fire Bolt",
+  "spell.mam.inferno": "Inferno",
+  "spell.mam.meteor_storm": "Meteor Storm",
   "spell.mam.water_strike": "Water Strike",
+  "spell.mam.water_jet": "Water Jet",
+  "spell.mam.water_torrent": "Water Torrent",
+  "spell.mam.tidal_wave": "Tidal Wave",
 
   "tooltip.mam.staff.tier": "Tier: %s",
   "tooltip.mam.staff.school": "School: %s",
@@ -75,6 +97,7 @@
   "message.mam.spell.insufficient_mana": "Insufficient mana! Need %.1f, have %.1f",
   "message.mam.spell.too_high_tier": "Spell requires tier %s spellbook",
   "message.mam.spell.learned": "Learned spell: %s",
+  "message.mam.spell.selected": "Selected: %s",
   "message.mam.no_staff": "You must hold a staff to open spell selection!",
   "message.mam.no_spellbook": "You must hold a spellbook to open spell selection!",
   "message.mam.need_staff_and_spellbook": "You must hold a staff in one hand and a spellbook in the other!",
